loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: '(' expected but identifier found.
while (!sortieTrouvee) {for x<- 1 to 5 {var y=0;
                            ^Poucet1:4: error: illegal start of simple expression
                                        gauche()};
                                                 ^